fix position on mobile navbar

--- a/static-production/scss/mixins/mixins.scss
+++ b/static-production/scss/mixins/mixins.scss
@@ -353,9 +353,8 @@
         grid-column: 1 / -1;
         z-index: 9;
         display: flex;
-        position: absolute;
-        // bottom: 0;
-        bottom: 10rem;
+        position: fixed;
+        bottom: 0;
         left: 0;
         width: 100%;
         margin-bottom: -0.5rem;
